--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@zip.js/zip.js": "^2.7.63",
+    "jszip": "^3.10.1",
     "next": "15.3.5",
     "openai": "^5.8.2",
     "react": "^19.0.0",
